feat(security): implement Role-Based Access Control (RBAC) matrix
- Add canonical roles: SUPER_ADMIN, FLEET_MANAGER, FLIGHT_OPERATOR, VIEWER with fine-grained permissions
- Secure Drone & Fleet Asset Registration endpoints with ASSET:VIEW and ASSET:FULL
- Implement System Config & User Management endpoints with role-bounded invitation controls
- Implement Mission Planning & Waypoint Editing with write vs delete permission gating
- Implement Flight Command Execution with separation between routine pilot commands and emergency overrides
- Secure Live Telemetry & Video Egress HUD endpoints and WebSocket role tagging
- Implement AI Incident Triage and cryptographic evidence export
- Add Flyway migration V3 for missions, flight_commands, incidents, and system_configs
- Configure CustomAccessDeniedHandler for 403 Forbidden responses
- Seed initial users for all roles in DataInitializer
- Add RbacMatrixIntegrationTest verifying full RBAC permission matrix (38 passing tests)